Improved query handling for project-scoped embeddings. (#43)
* Improved query handling for project-scoped embeddings, adjusted type member collection logic, and added support for 16-depth inheritance resolution.

* Refined response conventions and updated default parameters for lookup tools to optimize JSON compactness and result handling.

* Added project-scoped vector index names and labels for embeddings, refined chunk filtering to support project contexts, and ensured backward compatibility.

* Added Cypher queries to tag MemoryChunk and CodeChunk nodes with vector index labels specific to project contexts.

* Removed depth limit from Cypher inheritance resolution queries to allow unrestricted traversal. Added tests to validate updated query behavior.